--- a/src/UI/Components/Banner/Banner.scss
+++ b/src/UI/Components/Banner/Banner.scss
@@ -8,8 +8,52 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    &::-webkit-media-controls {
+      display: none;
+    }
   }
-  video::-webkit-media-controls {
-    display: none;
+  .scrollToId {
+    margin-top: -106px;
+    bottom: 0px;
+    position: relative;
+    display: block;
+    @keyframes scroll {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(46px);
+      }
+    }
+    .icon-scroll {
+      // font-size: 50px;
+      // color: #ffffff;
+      width: 40px;
+      height: 70px;
+      margin-left: -20px;
+      top: 50%;
+      margin-top: -35px;
+      box-shadow: inset 0 0 0 1px #fff;
+      border-radius: 25px;
+      opacity: 0.8;
+      &,
+      &:before {
+        position: absolute;
+        left: 50%;
+      }
+      &:before {
+        content: "";
+        width: 8px;
+        height: 8px;
+        background: #fff;
+        margin-left: -4px;
+        top: 8px;
+        border-radius: 4px;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        animation-name: scroll;
+      }
+    }
   }
 }
