--- a/src/UI/Layout/Footer/Footer.scss
+++ b/src/UI/Layout/Footer/Footer.scss
@@ -1,11 +1,13 @@
+@import "./../../../App.scss";
+
 footer.footer {
   margin: 0 110px;
   .footer-main {
     // display: flex;
     // justify-content: space-between;
     padding: 20px 0;
-    border-top: 1px solid #000000;
-    border-bottom: 1px solid #000000;
+    border-top: 1px solid $signature-color;
+    border-bottom: 1px solid $signature-color;
 
     .title {
       text-align: left;
